# shopify-odoo-real-conector

./: .env.example  .gitignore  CHANGELOG.md  COMPLIANCE_REPORT.md  Dockerfile  README.md  REVIEW_REPORT.md  docker-compose.yml  pyproject.toml  test_sync_sample.py
docs/: odoo-automated-action.md
src/odoo_shopify_connector/: __init__.py  api.py  cli.py  config.py  main.py  models.py  odoo_client.py  shopify_service.py  snapshot_service.py  sync_service.py
tests/: odoo_shopify_stock.py
