[project]
name = "odoo-shopify-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "1aravena",email = "vichoaravenas186@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "odoo_shopify_connector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
