[project]
name = "odoo-shopify-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "1aravena",email = "vichoaravenas186@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.12.4,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0"
]

[tool.poetry]
packages = [{include = "odoo_shopify_connector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
